# iometer

./: .gitattributes  .gitignore  BUILDING.md  COVERAGE_REPORT.md  DYNAMO_TEST_MODE_IMPLEMENTATION.md  GUI_CODE_USAGE_TRACKING.md  GUI_COVERAGE_STRATEGY.md  GUI_FUNCTION_MAPPING.md  MFC_ADAPTER_INTEGRATION.md  MFC_COVERAGE_REQUIREMENTS.md  Makefile  REFACTORING_OPPORTUNITIES.md  build.cmd  comparison_output.txt  index.html  summary.txt
branch/: index.html
coverage_report/: index.html  summary.json
full/: index.html
gui_tests/: .gitignore  README.md  capture_main.py  collect_gui_coverage.ps1  golden_builtin_specs.txt  iometer_gui.py  probe_mfc.py  run_gui_tests.py  test_about_eula.py  test_access_editcopy_delete.py  test_assign_spec.py  test_bigmeter.py  test_bigmeter_controls.py  test_cmdline_save.py  test_cmdline_switches.py  test_cycling_fields.py  test_edit_access_spec.py  test_edit_disk_targets.py  test_edit_results_display.py  test_edit_runtime_cycling.py  test_edit_spec_distributions.py  test_edit_spec_reply_align.py  test_edit_testsetup.py  test_edit_worker.py  test_file_open.py  test_load_fixtures.py  test_multi_manager.py  test_network_worker.py  test_new_access_spec.py  test_new_config_builtin_specs.py  test_remove_spec.py  test_reorder_spec.py  test_results_stat_menu.py  test_run_variants.py  test_save_roundtrip.py  test_save_subset.py  test_topology_workers.py
src/: AccessDialog.cpp  AccessSpecList.cpp  AccessSpecList.h  BigMeter.cpp  Galileo.rc  GalileoApp.cpp  GalileoApp.h  GalileoCmdLine.cpp  GalileoCmdLine.h  GalileoDoc.cpp  GalileoGlobals.cpp  GalileoView.cpp  ICFOpenDialog.cpp  ICFSaveDialog.cpp  IOCQAIO.h  IOCommon.h  IOGlobals.cpp  IOGrunt.cpp  IOGrunt.h  IOManager.cpp  IOManager.h  IOManagerAdapter.cpp  IOManagerAdapter.h  IOManagerWin.cpp  IOMemDebug.h  IOPlatform.h  IOPort.cpp  IOPortTCP.cpp  IOPortTCP.h  IOTargetDisk.cpp  IOVersion.h  LegalBox.cpp  MainFrm.cpp  (+25 more)
src/qt/: .gitignore  BarChartWidget.cpp  BarChartWidget.h  BigMeterWidget.cpp  BigMeterWidget.h  CMakeLists.txt  CROSS_GUI_COMPAT.md  DemoEngine.cpp  DemoEngine.h  DeployQt.cmake  DyProto.h  DynamoEngine.cpp  DynamoEngine.h  IometerEngine.h  IometerTypes.h  MainWindow.cpp  MainWindow.h  MeterWidget.cpp  MeterWidget.h  PageAccess.cpp  PageAccess.h  PageDisplay.cpp  PageDisplay.h  PageNetwork.cpp  PageNetwork.h  PageResults.cpp  PageResults.h  PageSetup.cpp  PageSetup.h  QtBarChartWidget.cpp  QtBarChartWidget.h  QtBigMeterWidget.cpp  QtBigMeterWidget.h  QtDemoEngine.cpp  QtDemoEngine.h  QtDyProto.h  QtDynamoEngine.cpp  QtDynamoEngine.h  QtIometerEngine.h  QtIometerTypes.h  (+26 more)
src/qt/build_cov/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestCoverageEnv.cmake  CTestTestfile.cmake  build.ninja  cmake_install.cmake  trout.txt
src/qt/build_cov/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/qt/build_cov/IometerQtCore_autogen/: deps  mocs_compilation.cpp
src/qt/build_cov/IometerQtCore_autogen/EWIEGA46WW/: moc_BarChartWidget.cpp  moc_BarChartWidget.cpp.d  moc_BigMeterWidget.cpp  moc_BigMeterWidget.cpp.d  moc_DemoEngine.cpp  moc_DemoEngine.cpp.d  moc_DynamoEngine.cpp  moc_DynamoEngine.cpp.d  moc_IometerEngine.cpp  moc_IometerEngine.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_MeterWidget.cpp  moc_MeterWidget.cpp.d  moc_PageAccess.cpp  moc_PageAccess.cpp.d  moc_PageDisplay.cpp  moc_PageDisplay.cpp.d  moc_PageNetwork.cpp  moc_PageNetwork.cpp.d  moc_PageResults.cpp  moc_PageResults.cpp.d  moc_PageSetup.cpp  moc_PageSetup.cpp.d
src/qt/build_cov/cov/: m.profdata  tst_accessspecs.profraw  tst_dynamoconn.profraw  tst_icf.profraw  tst_icffile.profraw  tst_results.profraw  tst_resultswriter.profraw  tst_types.profraw  tst_workerpool.profraw
src/qt/build_cov/tst_accessspecs_autogen/: deps
src/qt/build_cov/tst_accessspecs_autogen/include/: tst_accessspecs.moc  tst_accessspecs.moc.d
src/qt/build_cov/tst_dynamoconn_autogen/: deps
src/qt/build_cov/tst_dynamoconn_autogen/include/: tst_dynamoconn.moc  tst_dynamoconn.moc.d
src/qt/build_cov/tst_icf_autogen/: deps
src/qt/build_cov/tst_icf_autogen/include/: tst_icf.moc  tst_icf.moc.d
src/qt/build_cov/tst_icffile_autogen/: deps
src/qt/build_cov/tst_icffile_autogen/include/: tst_icffile.moc  tst_icffile.moc.d
src/qt/build_cov/tst_results_autogen/: deps
src/qt/build_cov/tst_results_autogen/include/: tst_results.moc  tst_results.moc.d
src/qt/build_cov/tst_resultswriter_autogen/: deps
src/qt/build_cov/tst_resultswriter_autogen/include/: tst_resultswriter.moc  tst_resultswriter.moc.d
src/qt/build_cov/tst_testrunner_autogen/: deps
src/qt/build_cov/tst_testrunner_autogen/include/: tst_testrunner.moc  tst_testrunner.moc.d
src/qt/build_cov/tst_types_autogen/: deps
src/qt/build_cov/tst_types_autogen/include/: tst_types.moc  tst_types.moc.d
src/qt/build_cov/tst_workerpool_autogen/: deps
src/qt/build_cov/tst_workerpool_autogen/include/: tst_workerpool.moc  tst_workerpool.moc.d
src/qt/build_cov_occ/raw/: dynamo.cov  tst_accessspecs.cov  tst_demo.cov  tst_dynamoconn.cov  tst_icf.cov  tst_icf_fixtures.cov  tst_icffile.cov  tst_mainwindow.cov  tst_meters.cov  tst_pagesetup.cov  tst_protocol.cov  tst_results.cov  tst_resultswriter.cov  tst_testrunner.cov  tst_types.cov  tst_workerpool.cov  validate_0.cov  validate_1.cov  validate_3.cov  validate_6.cov
src/qt/build_coverage/: CMakeCache.txt
src/qt/tests/: tst_accessspeccatalog.cpp  tst_accessspeclibrary.cpp  tst_accessspecs.cpp  tst_demo.cpp  tst_dynamoconn.cpp  tst_format_compat.cpp  tst_icf.cpp  tst_icf_fixtures.cpp  tst_icfdocument.cpp  tst_icffile.cpp  tst_icfstream.cpp  tst_icfwriter.cpp  tst_mainwindow.cpp  tst_managermap.cpp  tst_managerrestore.cpp  tst_meters.cpp  tst_networksetup.cpp  tst_pagesetup.cpp  tst_protocol.cpp  tst_qtbarchartwidget.cpp  tst_qtbigmeterwidget.cpp  tst_qtpageaccess.cpp  tst_qtpagedisplay.cpp  tst_qtpagenetwork.cpp  tst_qtpageresults.cpp  tst_resultdecode.cpp  tst_results.cpp  tst_resultsaggregator.cpp  tst_resultscsv.cpp  tst_resultstatcatalog.cpp  tst_resultswriter.cpp  tst_testrunner.cpp  tst_types.cpp  tst_wirestructs.cpp  tst_workerpool.cpp
(+271 files in other folders)
